--- a/dev/app/app.layout.css
+++ b/dev/app/app.layout.css
@@ -12,7 +12,9 @@
     /* background: linear-gradient(-100deg, #FF0100, #FF03FE, #FFFEFF, #FFFE00); */
 	padding: 10px 0 0 0;
 	width: 100%;
-
+	color: #eee;
+	border-radius: 0;
+	margin-bottom: 0;
 }
 
 .nav {
@@ -21,24 +23,58 @@
 	max-width: 600px;
 }
 
+.navbar-inverse {
+	border: 0;
+}
+
 .navbar-right {
+}
+
+.navbar-toggle {
+	/* border: 1px solid red; */
+	color: #111111;
 }
 
 .navbar-header {
 	background-color: rgba(0, 0, 0, 0.3);
 	text-align: center;
 	vertical-align: baseline;
-	width: 250px;
+	max-width: 250px;
 
 	border: 3px solid #eee;
 	border-radius: 20px 0 20px 0;
-	margin: 0 50px 17px 10px;
-	padding: 10px 10px 0px 10px;
+	margin: 0 50px 15px 10px;
+	/* padding: 10px 10px 0px 10px; */
+}
+
+.navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand {
+	margin: 0;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+	color: #eee;
+}
+
+.navbar-brand {
+	float:  left;
+	height: auto;
+	min-height: 100px;
+	padding: 0;
+
+}
+
+.logo {
+	margin: 5px;
+	padding: 10px;
 }
 
 .app-name {
+	margin: 0;
+	padding: 0;
+	vertical-align: middle;
+
 	font-family: 'Ravi Prakash', cursive;
-	font-size: 4em;
+	font-size: 2em;
 	font-weight: 600;
 	letter-spacing: -5px;
 	word-spacing: -100%;
@@ -91,7 +127,7 @@
 	font-size: 1.1em;
 	font-variant: small-caps;
 	text-align: center;
-	color: #eee;
+	color: #ffffff;
 	background-color: rgba(0, 0, 0, 0.5);
 }
 
@@ -186,7 +222,7 @@
 .login-button-group {
 	display: inline-block;
 	vertical-align: bottom;
-	margin: 0 15px 0 5px;
+	margin: 10px 0 10px 5px;
 	text-align: right;
 }
 
@@ -235,6 +271,11 @@
 	font-weight: 300;
 }
 
-.profile-link {
+.cat-editor {
+	margin: 5px;
+	background-color: #F5DC35;
+}
 
+.cat-editor > .navbar-form {
+	margin: 0;
 }
