--- a/dev/app/register/register.component.css
+++ b/dev/app/register/register.component.css
@@ -1,21 +1,36 @@
 .register-container {
     padding: 2%;
+    background: -webkit-linear-gradient(-100deg, #0000FB, #00FE00, #000A01); /* Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(-100deg, #0000FB, #00FE00, #000A01); /* Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(-100deg, #0000FB, #00FE00, #000A01); /* Firefox 3.6 to 15 */
+    background: linear-gradient(-100deg, #425A98, #519FCF);
 }
 
 .form-heading {
     margin-bottom: 40px;
     font-variant: small-caps;
     font-weight: 700;
-    color: #666666;
+    color: #F0F2F9;
+
+    border-color: #eeeeee;
+	border-width: 3px;
+	border-bottom-style: groove;
 }
 
 small {
-	color: #888888;
+	color: #F0F2F9;
 	vertical-align: -20%;
 }
 
 label {
 	font-variant: small-caps;
+	background-color: #282828;
+	color: #eeeeee;
+	line-height: 2.3em;
+}
+
+.form-control {
+	background-color: #eeeeee;
 }
 
 .ng-valid[required] {
