--- a/dev/app/ads/ad-detail.component.html
+++ b/dev/app/ads/ad-detail.component.html
@@ -58,7 +58,7 @@
             </div>
         </div>
 
-        <div *ngIf="ad.photoMain" class="form-group">
+        <div *ngIf="photoMain" class="form-group">
         <label for="photo-1" class="col-sm-2 col-form-label">Photo</label>
             <div class="col-sm-4" style="display: inline">
                 <input type="file" class="form-control" id="photo-1" name="photo-1" accept="image/*"
@@ -69,7 +69,7 @@
             </div>
         </div>
 
-        <div *ngIf="ad.photos[0]" class="form-group">
+        <div *ngIf="photos[0]" class="form-group">
         <label for="photo-2" class="col-sm-2 col-form-label">Photo</label>
             <div class="col-sm-4" style="display: inline">
                 <input type="file" class="form-control" id="photo-2" name="photo-2" accept="image/*"
@@ -80,7 +80,7 @@
             </div>
         </div>
 
-        <div *ngIf="ad.photos[1]" class="form-group">
+        <div *ngIf="photos[1]" class="form-group">
         <label for="photo-3" class="col-sm-2 col-form-label">Photo</label>
             <div class="col-sm-4" style="display: inline">
                 <input type="file" class="form-control" id="photo-3" name="photo-3" accept="image/*"
@@ -91,7 +91,7 @@
             </div>
         </div>
 
-        <div *ngIf="ad.photos[2]" class="form-group">
+        <div *ngIf="photos[2]" class="form-group">
         <label for="photo-4" class="col-sm-2 col-form-label">Photo</label>
             <div class="col-sm-4" style="display: inline">
                 <input type="file" class="form-control" id="photo-4" name="photo-4" accept="image/*"
@@ -102,7 +102,7 @@
             </div>
         </div>
 
-        <div *ngIf="ad.photos[3]" class="form-group">
+        <div *ngIf="photos[3]" class="form-group">
         <label for="photo-5" class="col-sm-2 col-form-label">Photo</label>
             <div class="col-sm-4" style="display: inline">
                 <input type="file" class="form-control" id="photo-5" name="photo5" accept="image/*"
