--- a/dev/app/ads/ad-review.component.html
+++ b/dev/app/ads/ad-review.component.html
@@ -1,5 +1,5 @@
 <div class="ad-preview">
-    <h1 class="preview-heading">User <small>Ad</small></h1>
+    <h1 class="preview-heading">Ad <small>preview</small></h1>
 
     <div *ngIf="ad.title" class="ad-data">
         <h2 id="ad-title">{{ad.title}}</h2>
